# coffee-sales-analysis

./: .gitignore  main.py  pyproject.toml
.github/: copilot-instructions.md
notebooks/: 01_eda.ipynb  02_cleaning.ipynb  03_analysis.ipynb
reports/: summary.md
src/: config.py
src/analysis/: product_analysis.py  sales_analysis.py  time_analysis.py
src/cleaning/: clean_data.py
src/features/: time_features.py
src/ingestion/: load_data.py
src/pipeline/: run_pipeline.py
src/validation/: schema.py
src/visualization/: plots.py
tests/: test_cleaning.py  test_features.py  test_schema.py
