[project]
name = "coffee-sales-analysis"
version = "0.1.0"
description = "Coffee sales dataset validation and exploratory analysis pipeline"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
	"pandas>=2.2.0",
	"matplotlib>=3.8.0",
	"seaborn>=0.13.0",
	"plotly>=5.24.0",
	"numpy>=1.26.0",
	"scikit-learn>=1.5.0",
	"python-dateutil>=2.9.0",
	"pydantic>=2.8.0",
	"jupyter>=1.1.0",
	"ipykernel>=6.29.0",
	"loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.0",
	"pytest-cov>=5.0.0",
	"black>=24.8.0",
	"ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py314"]
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = [
	"E201",
	"E202",
	"E203",
	"E221",
	"E222",
	"E223",
	"E224",
	"E225",
	"E226",
	"E227",
	"E228",
	"E231",
	"E501",
	"W191",
	"W291",
	"W293",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
